test/libsolidity/syntaxTests/nameAndTypeResolution/204_overwrite_memory_location_external.sol
contract C {
    function f(uint[] memory a) external {}
}
// ----
// TypeError: (28-43): Location has to be calldata for external function. Remove the data location keyword to fix this error.
